// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should render 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: 16px; width: 16px;"
    >
      <svg
        id="ark"
        style="height: 100%; width: 100%;"
        viewBox="0 0 36.3 30.6"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icon > should render fallback 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: 16px; width: 16px;"
    >
      <span
        style="height: 100%; width: 100%;"
      >
        Not found
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icon > should render with custom dimensions 1`] = `
<DocumentFragment>
  <div>
    <div
      style="height: 20px; width: 20px;"
    >
      <svg
        id="ark"
        style="height: 100%; width: 100%;"
        viewBox="0 0 36.3 30.6"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Icon > should render with size 'lg' 1`] = `[Function]`;

exports[`Icon > should render with size 'md' 1`] = `[Function]`;

exports[`Icon > should render with size 'sm' 1`] = `[Function]`;

exports[`Icon > should render with size 'xl' 1`] = `[Function]`;
